--- a/wp-content/themes/wkc01/style.css
+++ b/wp-content/themes/wkc01/style.css
@@ -207,8 +207,10 @@ ul.mobile-menu li {
     .tickets-link span {
         display: block;
         margin-right: 40px;
+        position: relative;
         text-align: right;
         width: auto;
+        z-index: 1;
     }
 
     .tickets-link i {
@@ -223,6 +225,17 @@ ul.mobile-menu li {
     #header-search-field,
     .search-field-container {
         grid-area: tickets-link;
+    }
+
+    #header-search-toggle {
+        cursor: pointer;
+    }
+
+    #header-search-field {
+        margin-right: 40px;
+        position: relative;
+        width: calc( 100% - 40px );
+        z-index: 2;
     }
 
     .header-logo {
