Footer development, mobile

--- a/wp-content/themes/wkc01/style.css
+++ b/wp-content/themes/wkc01/style.css
@@ -18,7 +18,11 @@ Text Domain:
 
 body, html { height: 100%; }
 
-body { font: 400 16px 'Steagal','Prompt', sans-serif; color: black; margin: 0px; }
+body { 
+    font: 400 16px/24px 'Steagal','Prompt', sans-serif; 
+    color: black; 
+    margin: 0px;
+}
 
 a {
     color: #1d5565;
@@ -158,6 +162,109 @@ ul.mobile-menu li {
     outline: none;
 }
 
+footer {
+    background-color: #a49e40;
+    box-sizing: border-box;
+    color: white;
+    display: table;
+    padding: 25px;
+    width: 100%;
+}
+
+footer i span {
+    display: none;
+}
+
+footer a {
+    color: white;
+}
+
+footer ul {
+    display: block;
+    list-style-type: none;
+    text-align: center;
+}
+
+footer ul li {
+    display: inline-block;
+}
+
+footer h2 {
+    border-bottom: 1px solid white;
+    display: block;
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 0.5em;
+    padding-bottom: 0.5em;
+}
+
+.footer-contact .map {
+    display: inline-block;
+    margin-left: 10px;
+}
+
+.footer-social li {
+    font-size: 24px;
+    margin: 5px;
+}
+
+.footer-actions li {
+    margin: 10px;
+    text-transform: uppercase;
+}
+
+footer form {
+    display: inline-flex;
+    justify-content: stretch;
+    margin-bottom: 10px;
+    width: 100%;
+}
+
+footer input {
+    appearance: none;
+    -webkit-appearance: none;
+    border: 0;
+    border-radius: 0;
+    box-shadow: none;
+    font: normal 16px 'Steagal', 'Prompt', sans-serif;
+    padding: 10px;
+}
+
+footer input[type=text],
+footer input[type=email] {
+    flex-basis: 100%;
+}
+
+footer input[type=submit] {
+    background-color: black;
+    color: white;
+}
+
+footer input:focus {
+    outline: none;
+}
+
+.footer-search,
+.footer-newsletter {
+    display: block;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s cubic-bezier(0, 1, 0, 1);
+}
+
+.footer-search.active,
+.footer-newsletter.active {
+    max-height: 600px;
+    transition: max-height 1s ease-in-out;
+}
+
+.footer-actions .active span {
+    color: black;
+}
+
+.footer-actions span {
+    cursor: pointer;
+}
 
 .video-container {
     float: none; clear: both;
