--- a/wp-content/themes/wkc01/style.css
+++ b/wp-content/themes/wkc01/style.css
@@ -442,6 +442,33 @@ main {
     width: 100%;
 }
 
+.button {
+    box-sizing: border-box;
+    display: inline-block;
+    font-weight: bold;
+    margin: 10px 0;
+    padding: 5px 10px;
+    text-transform: uppercase;
+}
+
+.button.bordered {
+    border: 2px solid #1d5565;
+}
+
+.button span:after {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f105";
+    display: inline-block;
+    margin-left: 5px;
+    transition: all 250ms linear 0s;
+}
+
+.button:hover span:after {
+    margin-left: 10px;
+    transition: all 250ms linear 0s;
+}
+
 @media screen and ( min-width: 799px ) {
 
     header {
