Add hover color to header links

--- a/wp-content/themes/wkc01/style.css
+++ b/wp-content/themes/wkc01/style.css
@@ -515,6 +515,10 @@ ul.instagram-pics {
         width: 100%;
     }
 
+    header a:hover {
+        color: black;
+    }
+
     .site-name {
         background-color: transparent;
         margin: 0;
