--- a/wp-content/themes/wkc01/style.css
+++ b/wp-content/themes/wkc01/style.css
@@ -158,7 +158,7 @@ ul.mobile-menu li {
 }
 
 ul.sub-menu {
-    max-height: 0;
+    max-height: 1px;
     overflow: hidden;
 }
 
@@ -177,6 +177,11 @@ ul.mobile-menu ul.sub-menu li {
     font-size: 18px;
     padding: 5px 0;
     position: relative;
+}
+
+ul.mobile-menu ul.sub-menu li:first-of-type {
+    border-top: 1px solid #EEE;
+    margin-top: 5px;
 }
 
 #header-search-toggle {
@@ -505,13 +510,16 @@ main {
 }
 
 ul.instagram-pics {
+    box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
     list-style-type: none;
+    justify-content: space-between;
+    padding: 0 4px;
 }
 
 .instagram-pics li {
-    flex-basis: 50%;
+    flex-basis: calc( 50% - 2px );
     height: 0;
     overflow: hidden;
     padding-top: 50%;
@@ -530,7 +538,7 @@ ul.instagram-pics {
 }
 
 .instagram-pics li:hover img {
-    transform: scale(1.1);
+    opacity: 0.9;
     transition: all 250ms linear 0s;
 }
 
@@ -544,7 +552,7 @@ ul.instagram-pics {
         grid-template-areas: 
           "site-name logo tickets-link"
           "nav nav nav";
-        margin: 10px auto;
+        margin: 20px auto;
         max-width: 1280px;
         padding: 0 10px;
         width: 100%;
@@ -611,6 +619,7 @@ ul.instagram-pics {
         list-style-type: none;
         margin: 0 auto;
         max-height: 300px;
+        overflow: visible;
         text-align: center;
     }
     
@@ -619,6 +628,38 @@ ul.instagram-pics {
         font-size: 18px;
         padding: 0 10px;
         text-transform: uppercase;
+    }
+
+    ul.sub-menu {
+        background-color: white;
+        left: 0;
+        position: absolute;
+        text-align: left;
+        white-space: nowrap;
+        z-index: 2;
+    }
+
+    ul.nav-menu ul.sub-menu li {
+        padding: 5px 10px;
+        text-transform: none;
+    }
+
+    ul.nav-menu ul.sub-menu li:last-of-type {
+        padding-bottom: 10px;
+    }
+
+    ul.sub-menu li a:hover {
+        color: black;
+    }
+
+    .menu-item-has-children a {
+        padding-right: 10px;
+    }
+    
+    .menu-item-has-children.active ul.sub-menu,
+    .menu-item-has-children:hover ul.sub-menu {
+        padding-top: 15px;
+        max-height: 9999px;
     }
 
     .site-name a,
@@ -740,7 +781,7 @@ ul.instagram-pics {
     main {
         margin: 0 auto;
         max-width: 1280px;
-        padding: 10px 10px 50px 10px;
+        padding: 30px 10px 50px 10px;
     }
 
     #home .post-content {
@@ -750,7 +791,7 @@ ul.instagram-pics {
     }
 
     .instagram-pics li {
-        flex-basis: 20%;
+        flex-basis: calc( 20% - 4px );
         padding-top: 20%;
     }
 
