--- a/wp-content/themes/wkc01/style.css
+++ b/wp-content/themes/wkc01/style.css
@@ -627,6 +627,14 @@ ul.instagram-pics {
 .team-member h3 {
     display: block;
     text-align: center;
+    margin-bottom: 0;
+}
+
+.team-member h4 {
+    color: #666;
+    font-weight: normal;
+    font-style: italic;
+    text-align: center;
 }
 
 .team-member img {
