--- a/wp-content/themes/wkc01/style.css
+++ b/wp-content/themes/wkc01/style.css
@@ -604,7 +604,7 @@ ul.instagram-pics {
     -webkit-hyphens: auto;
     -ms-hyphens: auto;
     hyphens: auto;
-    margin: 70px auto;
+    margin: 50px auto;
     max-width: calc( 100vw - 50px );
     text-align: justify;
 }
@@ -632,6 +632,10 @@ ul.instagram-pics {
 .post-content ul {
     margin: 0 0 10px 10px;
     padding: 0;
+}
+
+.search-results h2 {
+    text-align: left;
 }
 
 .team-member {
@@ -962,7 +966,7 @@ section.eventbrite-home {
 
     footer {
         display: grid;
-        grid-template-columns: calc( 33.33% - 20px)  calc( 33.33% - 20px)  calc( 33.33% - 20px);
+        grid-template-columns: calc( 33.33% - 25px)  calc( 33.33% - 25px)  calc( 33.33% - 25px);
         grid-template-rows: auto;
         grid-template-areas:
         "contact nysca actions"
@@ -970,7 +974,7 @@ section.eventbrite-home {
         justify-content: space-between;
         margin: 0 auto;
         max-width: 1280px;
-        padding: 20px 20px;
+        padding: 20px 25px;
     }
 
     .footer-wrapper {
@@ -1085,7 +1089,7 @@ section.eventbrite-home {
     }
 
     #home h2 {
-        margin: 3em 0;
+        margin: 2em 0;
     }
 
     .instagram-pics li {
