--- a/wp-content/themes/wkc01/style.css
+++ b/wp-content/themes/wkc01/style.css
@@ -1271,3 +1271,24 @@ section.eventbrite-home {
         min-height: 0;
     }
 }
+
+/* Gutenberg Image Gallery Rules ------------------------------------ */
+
+@media screen and ( min-width: 768px ) {
+    .wp-block-gallery figure {
+        overflow: hidden;
+    }
+    
+    ul.wp-block-gallery.columns-2.is-cropped img {
+        max-height: 52%;
+    }
+    
+    ul.wp-block-gallery.columns-3.is-cropped img {
+        max-height: 33%;
+    }
+    
+    ul.wp-block-gallery.columns-2.is-cropped li:last-of-type img,
+    ul.wp-block-gallery.columns-3.is-cropped li:last-of-type img {
+        max-height: 100%;
+    }
+}
